<resources>
    <string name="app_name">Gasto de Viagem</string>
    <string name="distancia">Distância</string>
    <string name="preco">Preço</string>
    <string name="autonomia">Autonomia</string>
    <string name="calcular">Calcular</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="kms_por_litro">KMs por Litro</string>
    <string name="label_gasto_total">Seu gasto total será de:</string>
    <string name="br_zero">R$ 0</string>
    <string name="preencha_campos">Preencha todos os campos!</string>
    <string name="preenche_valores_validos">Preencha com valores válidos!</string>
</resources>
