<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editDistance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/distancia"
        android:importantForAutofill="no"
        android:inputType="number" />

    <TextView
        android:id="@+id/textKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_de_quilometros" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/preco"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/preco_por_litro" />

    <EditText
        android:id="@+id/editAutonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/autonomia"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textAutonomy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/kms_por_litro" />

    <TextView
        android:id="@+id/labelResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/label_gasto_total"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/br_zero"
        android:textAllCaps="true"
        android:textColor="@color/darkBlue"
        android:textSize="35sp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:padding="16dp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>